test/arrays/sungeun/invalid_reindex3.good
invalid_reindex3.chpl:10: error: halt reached - invalid reindex using a distributed domain
